Minor changes for presentation

--- a/data_modelling.ipynb
+++ b/data_modelling.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Data Modelling using Scikit-Learn\n",
     "\n",
-    "Using models from the scikit-learn library, we will try to fit data to a simple machine learning model"
+    "Using models from the scikit-learn library, we will try to fit data to a simple machine learning model."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -576,14 +576,6 @@
     "\n",
     "plot_learning_curve(model9, 'Gradient Boosting Classifier', train_X, train_y)"
    ]
-  },
-  {
-   "source": [
-    "### TO DO\n",
-    "Hyperparameter Tuning"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   }
  ]
 }
