--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -206,13 +206,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Now that we have removed redundant variables, let us observe the distribution of data from one feature to another using pairplots.\n",
-    "\n",
-    "***Try using Colab, pairplots are not working on my local system***"
-   ]
+    "We can now export this data in the form of a .csv file."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
