--- a/EDA and model fitting/custommodel.ipynb
+++ b/EDA and model fitting/custommodel.ipynb
@@ -58,10 +58,10 @@
    "source": [
     "def fetchdata():\n",
     "    df=pd.DataFrame()\n",
-    "    for season in os.scandir('D:\\\\Pranav\\\\Code\\\\IEEE\\\\combined'):\n",
+    "    for season in os.scandir('D:\\\\Pranav\\\\Code\\\\IEEE\\\\nba-prediction-repo\\\\datasets\\\\combined'):\n",
     "        if season.is_dir():\n",
-    "            for month in os.scandir('D:\\\\Pranav\\\\Code\\\\IEEE\\\\combined\\\\'+season.name):\n",
-    "                temp=pd.read_csv('D:\\\\Pranav\\\\Code\\\\IEEE\\\\combined\\\\'+season.name+'\\\\'+month.name)\n",
+    "            for month in os.scandir('D:\\\\Pranav\\\\Code\\\\IEEE\\\\nba-prediction-repo\\\\datasets\\\\combined\\\\'+season.name):\n",
+    "                temp=pd.read_csv('D:\\\\Pranav\\\\Code\\\\IEEE\\\\nba-prediction-repo\\\\datasets\\\\combined\\\\'+season.name+'\\\\'+month.name)\n",
     "                df=df.append(temp,ignore_index=True)\n",
     "    df.drop(['Team1','Team2','Team1Score','Team2Score'],axis=1,inplace=True)\n",
     "    return df  "
